--- a/index.html
+++ b/index.html
@@ -4,9 +4,238 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>ВД</title>
+    <link rel="stylesheet" href="./css/style.css">
+
 </head>
 <body>
-    
+    <header class="header">
+        <div class="header__rigth__part">
+            <img src="" >
+        </div>
+        <nav class="header__nav">
+            <a href="#">Основная страница</a>
+            <a href="#">Группы</a>
+            <a href="#">Преподаватели</a>
+            <a href="#">Информация</a>
+        </nav>
+        <div class="header__left__part">
+            <img src="" alt="">
+            <a class="header__btn__auth btn-primary btn">
+                Авторизация
+            </a>
+        </div>
+    </header>
+    <section class="top">
+        <div class="top__left__part">
+            <img src="" alt="">
+        </div>
+        <div class="top__rigth__part">
+            <div class="content">
+                <h1 class="title">
+                    Комплекс историй за 4 года обучения
+                </h1>
+                <p class="text">
+                    Добавляйте свои истории!
+                </p>
+                <input type="text" placeholder="Что найти?">
+            </div>
+        </div>
+    </section>
+    <section class="news">
+        <div class="news__text-content">
+            <h1 class="news__title title">
+                Новости колледжа
+            </h1>
+            <p class="text">
+                Будь в курсе событий!
+            </p>
+        </div>
+        <ul class="news__list">
+            <li class="news__item">
+                <img src="">
+                <span>IS19-1</span>
+                <p>ШОК</p>
+                <span>Съел капусту</span>
+                <hr>
+                <span>18.01.23</span>
+                <div class="news__item__footer">
+                    <img src="" alt="">
+                    <div class="news__item__footer-description">
+                        <span>Palich</span>
+                        <span>Я люблю котят</span>
+                    </div>
+                </div>
+            </li>
+            <li class="news__item">
+                <img src="">
+                <span>IS19-1</span>
+                <p>Разбил телефон</p>
+                <span>Разбил телефон об машину</span>
+                <hr>
+                <span>17.01.23</span>
+                <div class="news__item__footer">
+                    <img src="" alt="">
+                    <div class="news__item__footer-description">
+                        <span>Popcov</span>
+                        <span>Опять болею</span>
+                    </div>
+                </div>
+            </li>
+            <li class="news__item">
+                <img src="">
+                <span>IS19-1</span>
+                <p>Сжог испарик</p>
+                <span>Я лох</span>
+                <hr>
+                <span>15.01.23</span>
+                <div class="news__item__footer">
+                    <img src="" alt="">
+                    <div class="news__item__footer-description">
+                        <span>Gaak</span>
+                        <span>Я ко 2 хожу</span>
+                    </div>
+                </div>
+            </li>
+            <li class="news__item">
+                <img src="">
+                <span>IS19-1</span>
+                <p>Пришел на пары</p>
+                <span>ну я с качалки</span>
+                <hr>
+                <span>infinity</span>
+                <div class="news__item__footer">
+                    <img src="" alt="">
+                    <div class="news__item__footer-description">
+                        <span>Nelbin</span>
+                        <span>Дома сижу</span>
+                    </div>
+                </div>
+            </li>
+        </ul>
+        <div class="news__button ">
+            <a href="#" class="header__btn__auth btn-primary btn">
+                Перейти ко всему новостям
+            </a>
+        </div>
+    </section>
+    <section class="description">
+        <div class="description__text-content">
+            <h1 class="description__title title">
+                Кузбасский колледж архитектуры строительства
+                и цифровых технологий
+            </h1>
+            <p class="text">
+                Вступи в мир знаний с нами!
+            </p>
+        </div>
+        <div class="description__video">
+            <video>
+                <source src="URL">
+            </video>
+        </div>
+        <div class="description__footer-link">
+            <a href="">
+                <span>Перейти на канал</span>
+                <img src="" alt="">
+            </a>
+        </div>
+    </section>
+    <section class="professions">
+        <div class="description__text-content">
+            <h1 class="description__title title">
+                Профессии
+            </h1>
+            <p class="text">
+                Кем ты можешь работать?
+            </p>
+        </div>
+        <ul class="professions__list">
+            <li class="professions__item">
+                <div class="professions__item-header">
+                    <div class="profession__logo">
+                        <img src="" alt="">
+                    </div>
+                    <div class="profession__name">
+                        <h6 class="profession__title"></h6>
+                        <span class="profession__salary"></span>
+                    </div>
+                </div>
+                <hr>
+                <div class="professions__item-body">
+                    <ul class="professions__description-list">
+                        <li class="professions__description-item">
+                            <span></span>
+                        </li>
+                        <li class="professions__description-item">
+                            <span></span>
+                        </li>
+                        <li class="professions__description-item">
+                            <span></span></li>
+                    </ul>
+                </div>
+                <div class="professions__item-footer">
+                    <button class="btn btn__send__request disabled">отправить заявку</button>
+                </div>
+            </li>
+            <li class="professions__item">
+                <div class="professions__item-header">
+                    <div class="profession__logo">
+                        <img src="" alt="">
+                    </div>
+                    <div class="profession__name">
+                        <h6 class="profession__title"></h6>
+                        <span class="profession__salary"></span>
+                    </div>
+                </div>
+                <hr>
+                <div class="professions__item-body">
+                    <ul class="professions__description-list">
+                        <li class="professions__description-item">
+                            <span></span>
+                        </li>
+                        <li class="professions__description-item">
+                            <span></span>
+                        </li>
+                        <li class="professions__description-item">
+                            <span></span>
+                        </li>
+                    </ul>
+                </div>
+                <div class="professions__item-footer">
+                    <button class="btn btn__send__request disabled">отправить заявку</button>
+                </div>
+            </li>
+            <li class="professions__item">
+                <div class="professions__item-header">
+                    <div class="profession__logo">
+                        <img src="" alt="">
+                    </div>
+                    <div class="profession__name">
+                        <h6 class="profession__title"></h6>
+                        <span class="profession__salary"></span>
+                    </div>
+                </div>
+                <hr>
+                <div class="professions__item-body">
+                    <ul class="professions__description-list">
+                        <li class="professions__description-item">
+                            <span></span>
+                        </li>
+                        <li class="professions__description-item">
+                            <span></span>
+                        </li>
+                        <li class="professions__description-item">
+                            <span></span>
+                        </li>
+                    </ul>
+                </div>
+                <div class="professions__item-footer">
+                    <button class="btn btn__send__request disabled">отправить заявку</button>
+                </div>
+            </li>
+        </ul>
+    </section>
+    <footer class="footer"></footer>
 </body>
 </html>
