create map and add video

--- a/index.html
+++ b/index.html
@@ -152,9 +152,7 @@
                     </p>
                 </div>
                 <div class="description__video">
-                    <video>
-                        <source src="URL">
-                    </video>
+                    <iframe src="https://www.youtube.com/embed/s7SPcESZZFc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 </div>
                 <div class="description__footer">
                     <a href="#" class="description__footer-link">
@@ -267,6 +265,8 @@
             </div>
         </div>
     </section>
-    <footer class="footer"></footer>
+    <footer class="map">
+        <script type="text/javascript" charset="utf-8" defer src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Adac498dbaae8d42705970be9ec5f1490d35fff7aaa8197f1fa4e45fa57b8ad1a&amp;width=1280&amp;height=539&amp;lang=ru_RU&amp;scroll=true"></script>
+    </footer>
 </body>
 </html>
