create templates for pages students and teachers

--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
     <header class="header">
         <div class="container">
             <div class="header__inner">
-                <div class="header__right__part">
+                <a href="index.html" class="header__right__part">
                     <img src="./assets/icon/header-icon/header-logo-icon.svg" alt="">
-                </div>
+                </a>
                 <nav class="header__nav">
-                    <a href="#">Основная страница</a>
-                    <a href="#">Группы</a>
-                    <a href="#">Преподаватели</a>
-                    <a href="#">Информация</a>
+                    <a href="index.html" class="nav__link active">Основная страница</a>
+                    <a href="./pages/groups/groups.html" class="nav__link">Группы</a>
+                    <a href="./pages/teachers/teachers.html" class="nav__link">Преподаватели</a>
+                    <a href="./pages/students/students.html" class="nav__link">Студенты</a>
                 </nav>
                 <div class="header__left__part">
-                    <img src="./assets/icon/header-icon/change-theme.svg" alt="">
+<!--                    <img src="./assets/icon/header-icon/change-theme.svg" alt="">-->
                     <a class="header__btn__auth btn-primary btn">
                         Авторизация
                     </a>
@@ -33,7 +33,7 @@
         <div class="container">
             <div class="top__inner">
                 <div class="top__left__part">
-                    <img src="./assets/img/top-img/top-img.png" alt="">
+                    <img src="./assets/img/top-img/top-img.svg" alt="">
                 </div>
                 <div class="top__right__part">
                     <div class="content">
@@ -199,7 +199,7 @@
                             </ul>
                         </div>
                         <div class="professions__item-footer">
-                            <button class="btn__send__request btn-secondary disabled btn ">Подать заявку</button>
+                            <button class="btn__send__request btn-secondary disabled btn ">Проконсультироваться</button>
                         </div>
                     </li>
                     <li class="professions__item">
@@ -231,7 +231,7 @@
                             </ul>
                         </div>
                         <div class="professions__item-footer">
-                            <button class="btn btn__send__request btn-secondary disabled">Подать заявку</button>
+                            <button class="btn btn__send__request btn-secondary disabled">Проконсультироваться</button>
                         </div>
                     </li>
                     <li class="professions__item">
@@ -258,7 +258,7 @@
                             </ul>
                         </div>
                         <div class="professions__item-footer">
-                            <button class="btn btn__send__request btn-secondary disabled">Подать заявку</button>
+                            <button class="btn btn__send__request btn-secondary disabled">Проконсультироваться</button>
                         </div>
                     </li>
                 </ul>
