--- a/pages/teachers/teachers.html
+++ b/pages/teachers/teachers.html
@@ -4,9 +4,33 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../../css/global.css">
     <title>Преподаватели</title>
 </head>
 <body>
-    
+    <header class="header">
+        <div class="container">
+            <div class="header__inner">
+                <a href="../../index.html" class="header__right__part">
+                    <img src="../../assets/icon/header-icon/header-logo-icon.svg" alt="">
+                </a>
+                <nav class="header__nav">
+                    <a href="../../index.html" class="nav__link">Основная страница</a>
+                    <a href="../groups/groups.html" class="nav__link">Группы</a>
+                    <a href="../teachers/teachers.html" class="nav__link active">Преподаватели</a>
+                    <a href="../students/students.html" class="nav__link">Студенты</a>
+                </nav>
+                <div class="header__left__part">
+                    <!--                    <img src="./assets/icon/header-icon/change-theme.svg" alt="">-->
+                    <a class="header__btn__auth btn-primary btn">
+                        Авторизация
+                    </a>
+                </div>
+            </div>
+        </div>
+    </header>
+<!--    <footer class="map">-->
+<!--        <script type="text/javascript" charset="utf-8" defer src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Adac498dbaae8d42705970be9ec5f1490d35fff7aaa8197f1fa4e45fa57b8ad1a&amp;width=1280&amp;height=539&amp;lang=ru_RU&amp;scroll=true"></script>-->
+<!--    </footer>-->
 </body>
 </html>
